<resources>
    <string name="app_name">Portukultura</string>
    <string name="textoPresentacion">
        Aplikazio honetan hainbat joko interaktibo eskaintzen ditu, xedearekin historia, kultur ondarea eta ezagutzeko Portugaleteko tradizioak modu atsegin eta dibertigarrian.
    </string>
    <string name="botonPresentacion">Erregistratu</string>
    <string name="onena">onena</string>
    <string name="jarrillero">jarrillero</string>
    <string name="ospetsua">ospetsua</string>
    <string name="portugalete">portugalete</string>
    <string name="ardoa">ardoa</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="dialog_title">Zure datuak sartu</string>
    <string name="dialog_comenzar">Hasi</string>
    <string name="dialog_cancelar">Atzera</string>
    <string name="error_campos_vacios">Mezedez, zure datuak bete.</string>
    <string name="datos_guardados">Datuak gordeta:</string>
    <string name="nombre">Izena</string>
    <string name="apellido">Abizena</string>
    <string name="zer_lotzen_du_portugaleteko_zubi_esekiak">Zer lotzen du Portugaleteko Zubi Esekiak?</string>
    <string name="a_konektatu_bi_kontinente">a) Konektatu bi kontinente</string>
    <string name="b_portugalete_eta_getxo_lotzen_ditu">b) Portugalete eta Getxo lotzen ditu</string>
    <string name="c_ibai_bat_eta_laku_bat_lotzen_ditu">c) Ibai bat eta laku bat lotzen ditu</string>
    <string name="zer_egitura_mota_du_portugaleteko_zubi_esekiak">Zer egitura mota du Portugaleteko Zubi Esekiak?</string>
    <string name="a_lurpeko_zubi_bat">a) Lurpeko zubi bat</string>
    <string name="b_zubi_flotatzaile_bat">b) Zubi flotatzaile bat</string>
    <string name="c_zubi_transbordadore_bat">c) Zubi transbordadore bat</string>
    <string name="moverAdyacentes">Hutsunearen ondoan dauden piezak bakarrik mugi ditzakezu.</string>
    <string name="que_me_mareo">Que me mareo</string>
    <string name="sube_arriba">Sube arriba</string>
    <string name="pantorrilla">Pantorrilla</string>
    <string name="chiquitin">Chiquitin</string>
    <string name="cancion">El otro día cuando llovía,\nle vi a mi novia la (1)\ny yo le dije, con gran salero:\nTápate eso, tápate eso,\nque me mareo.\nTengo un novio (2)\nque se llama Nicolás:\nsi lo quieres conocer,\n(3) y lo verás.\nParabapapapapá……\nUn señorito me dijo anoche\nque si quería pasear en coche.\ny yo le dije con gran salero\nno quiero coche, no quiero coche..\n(4)!</string>
    <string name="comprobar">Conprobatu</string>
    <string name="primeraPregunta3_2">Noiz inauguratu egin zen?</string>
    <string name="_1890">1890</string>
    <string name="_1889">1889</string>
    <string name="_1888">1888</string>
    <string name="non_dago_canilla_kolokatuta">Non dago canilla kolokatuta?</string>
    <string name="alde_zaharrean">Alde zaharrean</string>
    <string name="zubian">Zubian</string>
    <string name="aurreko_aukerak_ez_dira_egokiak">Aurreko aukerak ez dira egokiak</string>
    <string name="turismo_ofizina_bat_izan_zen">Turismo ofizina bat izan zen?</string>
    <string name="bai">Bai</string>
    <string name="ez">Ez</string>
    <string name="aurrera">Aurrera</string>
    <string name="asmakizuna1">La Canillatik tren asko abiatu ziren. Begira nasara, bidaiariak eta bidaiariak beti egon diren lekura. Zer objektuk gidatzen ditu irteerak eta etorrerak? Tik-tak bidez, markatu zer ordu igaro diren</string>
    <string name="asmakizuna2">Bi lerro paralelo, distiratsuak eta luzeak, iraganeko istorioak garraiatzen dituzte. Zer dira, tren azkarrak eta bagoi kargatuak daramatzatela?</string>
    <string name="asmakizuna3">Ehunka lagunek bidaiatu dute nire barruan, gurpil gainean ibili naiz geltoki bakoitzean. Metalez, egurrez eta lurrunez egina nago, nor naiz ni leku honetan?</string>
    <string name="asmakizuna4">Urrutira edo gertura bidaiatu nahi baduzu, joan aurretik, nigana etorri behar duzu. Nigan zure dirua pase berezi batengatik aldatzen duzu, parekorik gabeko tren batean ibiltzeko.</string>
    <string name="leihatila">LEIHATILA</string>
    <string name="tren_bagoi_bat">TREN BAGOI BAT</string>
    <string name="erlojua">ERLOJUA</string>
    <string name="trenbidea">TRENBIDEA</string>
    <string name="barrabaja">_</string>
    <string name="iturria">Iturria</string>
    <string name="etxea">Etxea</string>
    <string name="hontza">Hontza</string>
    <string name="palmondoak_eta_zuhaitzak">Palmondoak eta zuhaitzak</string>
    <string name="tximinoak">Tximinoak</string>
    <string name="arrautz_ospetsu_hau_pilota_forma_du_eta_ogiarekin_zerbitzatzen_da">Arrautz ospetsu hau pilota forma du, eta ogiarekin zerbitzatzen da.</string>
    <string name="taberna_honen_aurrean_canillako_tren_geltokia_dago">Taberna honen aurrean Canillako Tren Geltokia dago.</string>
    <string name="taberna_honen_jabeak_beraien_bezeroak_oso_ondo_zaintzeaz_ospea_dute">Taberna honen jabeak, beraien bezeroak oso ondo zaintzeaz ospea dute.</string>
    <string name="taberna_hau_santa_maria_basilikaren_beheko_aldean_kokatuta_dago">Taberna hau Santa Maria Basilikaren beheko aldean kokatuta dago.</string>
    <string name="continuar">Continuar</string>
    <string name="continuar2">Continuar</string>
    <string name="non_dago_taberna_ospetsua">Non dago taberna ospetsua?</string>
    <string name="zein_dira_osagaiak">Zein dira osagaiak?</string>
    <string name="zein_da_saltza_berezia">Zein da saltza berezia?</string>
    <string name="zeren_ondoan_dago_taberna_kokatuta">Zeren ondoan dago taberna kokatuta?</string>
    <string name="erantzun">Erantzun</string>
    <string name="mapa">Mapa</string>
    <string name="txarto_egin_duzu_saiatu_berriro">Txarto egin duzu. Saiatu berriro.</string>
    <string name="irakurri_testua_eta_klikatu_hurrengo_botoian_jarraitzeko">Irakurri testua eta klikatu hurrengo botoian jarraitzeko.</string>
    <string name="irakurri_galderak_arretaz_eta_erantzun_hauei">Irakurri galderak arretaz eta erantzun hauei.</string>
    <string name="antolatu_letra_hauek_zuzenean_hitza_lortzeko">Antolatu letra hauek zuzenean hitza lortzeko.</string>
    <string name="helburu_finalerako_letra_bat_lortu_duzu_itzuli_mapa_atzera_nahi_baduzu_sakatu_mapa_botoia">Helburu finalerako letra bat lortu duzu. Itzuli mapa atzera nahi baduzu, sakatu \'Mapa\' botoia.</string>
    <string name="bideoa_ikusi_ondoren_hasieratu_botoia_aktibatuko_da_hasteko">"Bideoa ikusi ondoren, 'Hasieratu' botoia aktibatuko da hasteko. "</string>
    <string name="qr_a_klikatu_behar_du_irudia_ikusteko">" QR-a klikatu behar du irudia ikusteko."</string>
    <string name="abestia_testua_ondo_irakurri_eta_ondoren_agertzen_diren_hitz_desordenatuak_irakurri_ondoren_hasi_botoian_klik_egin_dezakezu_hutsuneak_hitz_egokiekin_betetzeko">Abestia: Testua ondo irakurri eta ondoren agertzen diren hitz desordenatuak. Irakurri ondoren, \'Hasi\' botoian klik egin dezakezu hutsuneak hitz egokiekin betetzeko.</string>
    <string name="arrastatu_irudiak_dagokien_hitzera">Arrastatu irudiak dagokien hitzera.</string>
    <string name="ongi_etorri_jokoaren_aurkezpenera_testua_irakurri_eta_ulertu_ondoren_erregistratu_botoian_klik_egin_dezakezu_jolasten_hasi_eta_puntu_irabazteko">Ongi etorri jokoaren aurkezpenera. Testua irakurri eta ulertu ondoren, \'Erregistratu\' botoian klik egin dezakezu jolasten hasi eta puntu irabazteko.</string>
    <string name="joko_honek_irudi_baten_puzzle_bat_osatzen_du_zure_helburua_puzzleko_piezak_ondo_ordenatzea_da_irudia_osatzeko_pieza_bat_mugitzen_baduzu_besterik_gabe_egin_klik_zuriaren_ondoan_dagoen_irudian_eta_automatikoki_bere_tokian_jarriko_da">Joko honek irudi baten puzzle bat osatzen du. Zure helburua puzzleko piezak ondo ordenatzea da irudia osatzeko. Pieza bat mugitzen baduzu, besterik gabe, egin klik zuriaren ondoan dagoen irudian, eta automatikoki bere tokian jarriko da.</string>
    <string name="hitz_zopa_aurkitu_hitz_zopan_dauden_hitzak_aurkitzen_duzun_bakoitzean_marraztuta_agertuko_da">HITZ ZOPA: Aurkitu hitz zopan dauden hitzak. Aurkitzen duzun bakoitzean, marraztuta agertuko da.</string>
    <string name="joko_honek_testua_dagokion_esaldira_arrastatzea_du_helburu">Joko honek testua dagokion esaldira arrastatzea du helburu.</string>
    <string name="irakurri_galderak_arretaz_eta_aukeratu_zure_iritziz_egokiena_den_aukera">Irakurri galderak arretaz eta aukeratu zure iritziz egokiena den aukera.</string>
    <string name="hitza_osatu">Hitza osatu</string>
    <string name="a_lortu_duzue">A LORTU DUZUE</string>
    <string name="o_lortu_duzue">O LORTU DUZUE</string>
    <string name="n_lortu_duzue">N LORTU DUZUE</string>
    <string name="d_lortu_duzue">D LORTU DUZUE</string>
    <string name="r_lortu_duzue">R LORTU DUZUE</string>
    <string name="e_lortu_duzue">E LORTU DUZUE</string>
    <string name="mapa_behatu_jarduerak_egiteko_puntuaren_kolorea_kontuan_hartu_behar_duzu_horia_kolorea_duen_puntu_batek_adierazten_du_jarduera_jolastera_prest_dagoela_berde_kolorea_duten_puntuek_esan_nahi_dute_dagoeneko_egindako_jarduerak_direla_gorria_kolorea_duten_puntuek_adierazten_dute_oraindik_egitekoak_diren_jarduerak_daudela_jolastu_eta_jarduera_guztiak_bete">Mapa behatu. Jarduerak egiteko, puntuaren kolorea kontuan hartu behar duzu. **Horia** kolorea duen puntu batek adierazten du jarduera jolastera prest dagoela. **Berde** kolorea duten puntuek esan nahi dute dagoeneko egindako jarduerak direla. **Gorria** kolorea duten puntuek adierazten dute oraindik egitekoak diren jarduerak daudela. Jolastu eta jarduera guztiak bete!</string>
    <string name="credenciales_de_los_desarrolladores">"Credenciales de los desarrolladores "</string>
    <string name="credenciales">credenciales</string>
    <string name="clientes">Clientes: \n</string>
    <string name="desarrolladores">desarrolladores:\n</string>
</resources>