<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Abestia">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Contenedor horizontal para imágenes -->
    <LinearLayout
        android:id="@+id/logos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.35"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gHor1"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="@id/gVer1"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Imágenes horizontales -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:src="@drawable/icjardin" />

        <ImageView
            android:id="@+id/upv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:src="@drawable/upv" />

        <ImageView
            android:id="@+id/icjardin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/logo" />

    </LinearLayout>

    <TextView
        style="@style/Textos"
        android:id="@+id/sube_arriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sube_arriba"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/pantorrilla"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toTopOf="@id/gHor3" />

    <TextView
        style="@style/Textos"
        android:id="@+id/que_me_mareo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/que_me_mareo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/chiquitin"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toStartOf="@+id/gVer2"
        app:layout_constraintTop_toTopOf="@id/gHor3" />

    <TextView
        style="@style/Textos"
        android:id="@+id/pantorrilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantorrilla"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/sube_arriba" />

    <TextView
        style="@style/Textos"
        android:id="@+id/chiquitin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chiquitin"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toStartOf="@+id/gVer2"
        app:layout_constraintTop_toBottomOf="@id/que_me_mareo" />

    <TextView
        style="@style/Textos"
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cancion"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/gHor3"
        app:layout_constraintEnd_toStartOf="@+id/gVer3"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toTopOf="@+id/gHor1" />

    <Button
        style="@style/Botones"
        android:id="@+id/hasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_comenzar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gVer3"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toTopOf="@+id/gHor4" />
    <ImageView
        android:id="@+id/ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/gHor1"
        app:layout_constraintEnd_toStartOf="@+id/gVer3"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

</androidx.constraintlayout.widget.ConstraintLayout>